fixed alignment in the header

--- a/src/styles/AccountInfo.scss
+++ b/src/styles/AccountInfo.scss
@@ -26,6 +26,7 @@
     font-size: 14px;
     display: flex;
     align-items: center;
+    margin-top: 5px;
 
     & svg:nth-child(3){
       margin-left: 5px;
